--- a/index.html
+++ b/index.html
@@ -3,14 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Akash Bhat | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Hello, I'm Akash 👋</h1>
-    <p>I'm an aspiring web developer learning HTML and CSS.</p>
-    <a href="https://github.com" target="_blank">Visit my GitHub</a>
-  </div>
+  <header>
+    <h1>Akash Bhat</h1>
+    <p>Tech Enthusiast | Passionate about Networking & Software Development</p>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I am passionate about technology, networking, and software development. Currently pursuing a B.Tech in Information and Communication Technology, I enjoy building things on the web and continuously learning new technologies.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>C</li>
+      <li>C++</li>
+      <li>Teamwork</li>
+      <li>Communication</li>
+      <li>Time Management</li>
+      <li>Fast Learning</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:bhatakash20@gmail.com">bhatakash20@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/akash-bhat2101" target="_blank">linkedin.com/in/akash-bhat2101</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Akash Bhat</p>
+  </footer>
 </body>
 </html>
